Corrects content-wrap class syntax

--- a/new-css-portfolio/css/styles.css
+++ b/new-css-portfolio/css/styles.css
@@ -25,7 +25,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
-content-wrap  {
+.content-wrap  {
   width: 900px;
   margin: 0 auto;
 }
